syntax = "proto3";

package items.password;

option go_package = "gen/items/password";

import "google/protobuf/empty.proto";

service Service {
  // Создание нового пароля
  rpc CreatePassword (CreatePasswordRequest) returns (PasswordItem);

  // Получение пароля по ID
  rpc GetPassword (GetPasswordRequest) returns (PasswordItem);

  // Получение списка всех паролей пользователя
  rpc ListPasswords (ListPasswordsRequest) returns (ListPasswordsResponse);

  // Обновление пароля
  rpc UpdatePassword (UpdatePasswordRequest) returns (PasswordItem);

  // Удаление пароля
  rpc DeletePassword (DeletePasswordRequest) returns (google.protobuf.Empty);
}

// Запросы
message CreatePasswordRequest {
  string login = 1;           // Логин (будет зашифрован)
  string password = 2;        // Пароль (будет зашифрован)
  string target = 3;          // От какой системы/сайта логин/пароль
  string description = 4;     // Описание
  string meta_data_name = 5;  // Название метаданных
  string meta_data_value = 6; // Значение метаданных
}

message ListPasswordsRequest {
  int32 page = 1;   // Какая страница
  int32 per_page = 2;  // Сколько записей на странице
  string filter = 3; // Фильтр по тегам или категориям
}

message GetPasswordRequest {
  int64 id = 1;  // UUID пароля
}

message UpdatePasswordRequest {
  int64 id = 1;
  string login = 2;
  string password = 3;
  string target = 4;
  string description = 5;
}

message DeletePasswordRequest {
  int64 id = 1;
}

// Ответы
message ListPasswordsResponse {
  repeated PasswordItem passwords = 1;
  int32 total_count = 2;     // Общее количество записей
  int32 total_pages = 3;     // Общее количество страниц
  int32 current_page = 4;    // Текущая страница
}

// Основная сущность
message PasswordItem {
  int64 id = 1;                     // Идентификатор
  string login = 2;                 // Логин (будет зашифрован)
  string password = 3;              // Пароль (будет зашифрован)
  string target = 4;                // От какой системы/сайта логин/пароль
  string description = 5;           // Описание
  string created_at = 6;            // Дата создания
  repeated MetaData meta_data = 7;  // Список метаданных
}

message MetaData {
  int64 id = 1;               // Идентификатор
  string name = 2;  // Название метаданных
  string value = 3; // Значение метаданных
}